--- a/src/Components/Tile/style.css
+++ b/src/Components/Tile/style.css
@@ -1,6 +1,7 @@
-.App {
-  background: #c0c0c0;
-  padding: 10px;
+.tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 4px solid;
   border-right-color: #7b7b7b;
   border-bottom-color: #7b7b7b;
@@ -8,15 +9,25 @@
   border-top-color: white;
 }
 
-.body {
-  background: #c0c0c0;
-  margin-top: 10px;
+.opened {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 4px solid;
   border-right-color: white;
   border-bottom-color: white;
   border-left-color: #7b7b7b;
   border-top-color: #7b7b7b;
-  display: grid;
-  grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(16, 1fr);
+}
+
+.flag {
+  flex-grow: 1;
+}
+
+.bomb {
+  flex-grow: 1;
+}
+
+.neighbors {
+  flex-grow: 1;
 }
